--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Poppins&display=swap"
-      rel="stylesheet"/>
-    <title>Product Home Page</title>
+      rel="stylesheet"
+    />
+    <title>iNeuron Cart</title>
   </head>
   <body>
     <nav>
@@ -59,14 +60,18 @@
             <h4>Discount</h4>
             <h1>50%</h1>
           </div>
-          <img src="./images/headphones.jpg" alt="headphone" />
+          <img
+            src="./images/headphones.jpg"
+            class="headphones"
+            alt="headphones"
+          />
         </div>
         <div class="dots">
           <div class="dot yellow-dot"></div>
           <div class="dot tomato-dot"></div>
           <div class="dot black-dot"></div>
         </div>
-        <button class="action-btn">Add to chart</button>
+        <button class="action-btn">Add to cart</button>
       </div>
     </div>
   </body>
